Layertree margin fixup (after invisible folder icons change)

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -6,7 +6,7 @@
     position: relative;
   }
   .leave .leave, .themeContainer .leave {
-    margin-left: 1.28em;
+    margin-left: 0.75em;
   }
   .selectedWrapper.disabled, .featureInfoWrapper.disabled {
     opacity: 0.4;
